--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "*",
     "react-native-gesture-handler": "*",
     "react-native-reanimated": "*",
-    "react-native-redash": "*"
+    "react-native-redash": "*",
+    "react-native-video": "*"
   },
   "devDependencies": {
     "@react-native-community/image-editor": "^2.3.0",
@@ -46,5 +47,8 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-redash": "^12.0.2",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "react-native-video": "^4.4.5"
   }
 }
