--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@react-native-community/image-editor": "^2.3.0",
+    "react-native-video": "^4.4.5",
     "@types/react": "^16.9.34",
     "@types/react-native": "^0.62.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
@@ -49,6 +50,6 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "react-native-video": "^4.4.5"
+    
   }
 }
