--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "devDependencies": {
     "@react-native-community/image-editor": "^2.3.0",
-    "react-native-video": "^4.4.5",
     "@types/react": "^16.9.34",
     "@types/react-native": "^0.62.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
@@ -45,11 +44,10 @@
     "react": "^16.13.1",
     "react-native": "^0.62.2",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-reanimated": "^1.8.0",
+    "react-native-reanimated": "^1.9.0",
     "react-native-redash": "^12.0.2",
+    "react-native-video": "^4.4.5",
     "typescript": "^3.8.3"
   },
-  "dependencies": {
-    
-  }
+  "dependencies": {}
 }
