--- a/package.json
+++ b/package.json
@@ -49,5 +49,7 @@
     "react-native-video": "^4.4.5",
     "typescript": "^3.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/react-native-video": "^5.0.1"
+  }
 }
