--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@react-native-community/image-editor": "^2.3.0",
     "@types/react": "^16.9.34",
+    "@types/react-native-video": "^5.0.1",
     "@types/react-native": "^0.62.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
@@ -50,6 +51,6 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@types/react-native-video": "^5.0.1"
+    
   }
 }
